hphp/hack/test/typecheck/uninitialised_this5.bad.php.exp
ERROR: File "uninitialised_this5.bad.php", line 7, characters 7-11:
Until the initialization of `$this` is over, you can only call private methods
The initialization is not over because `$this->i` can still potentially be null (NastCheck[3004])
