hphp/hack/test/typecheck/uninitialised_this5.bad.php
<?hh

class C {
  public int $i;
  public function __construct() {
    foreach (vec[] as $_) {
      $this;
    }
    $this->i = 1;
  }

  public function isGood(): bool {
    return true;
  }
}
